--- a/css/myModal.css
+++ b/css/myModal.css
@@ -1,44 +1,24 @@
-/* The Modal (background) */
 .myModal {
     display: none; 
     color: White;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
   }
   
-  /* Modal Content/Box */
   .myModal-content {
     position: relative;
     margin: auto;
     border-radius: 1.5vh;
     background-color: #212121;
-    margin: 5% auto; /* 15% from the top and centered */
+    margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */
-  }
-  
-  /* The Close Button */
-  .myClose {
-    color: #aaa;
-    position: absolute;
-    top: 0%;
-    right: 1%;
-    font-size: 28px;
-    justify-content: center;
-    font-weight: bold;
-  }
-  
-  .myClose:hover,
-  .myClose:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+    width: 50%;
   }
