--- a/css/board/myModal.css
+++ b/css/board/myModal.css
@@ -9,15 +9,14 @@
     width: 100%; 
     height: 100%; 
     overflow: auto; 
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(from var(--StandardGray-1) r g b / 80%);
     animation: fadeIn 0.5s forwards;
   }
   .myModal-content {
     position: relative;
     margin: auto;
     border-radius: 1.5vh;
-    background-color: #212121;
+    background-color: var(--StandardGray-2);
     margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
@@ -37,3 +36,22 @@
     height: 100%;
     object-fit: contain;
   }
+  .SelectionGrid
+{
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    width: 100%;
+    height: 20vh;
+}
+.ImageForSelection
+{
+    vertical-align: middle;
+    border-radius: 10px;
+    border: solid;
+    border-color: #505050;
+    border-radius: 0.5vh;
+    width: 15vh;
+    height: 80%;
+    background-color: var(--StandardGray-3);
+}
