--- a/css/homePage/sidebar.css
+++ b/css/homePage/sidebar.css
@@ -57,3 +57,13 @@ html, body {
     width: 5vh;
     height: 5vh;
 }
+#sidebar > div
+{
+    border-radius: 5px;
+    margin-bottom: 1vh;
+    border-bottom: solid 2px var(--StandardGray-2);
+}
+#sidebar > div:hover
+{
+    background-color: var(--StandardGray-2);
+}
