--- a/css/homePage/homeWebsite.css
+++ b/css/homePage/homeWebsite.css
@@ -27,7 +27,15 @@ html, body {
 {
     transition: 1s;
 }
-.fixedElementClass
+.animatedElementClass
 {
     position: fixed;
+}
+.animatedContainers
+{
+    display: none;
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
