--- a/css/homePage/popup.css
+++ b/css/homePage/popup.css
@@ -1,27 +1,28 @@
-.popup
-{
+.popup {
     display: none;
     position: absolute;
-    width: 50%;
-    height: 80%;
+    width: 40%;
+    height: 92%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-#contentFitter
-{
-    margin-top: 50px;
+
+#contentFitter {
+    overflow: hidden;
+    overflow-y: scroll;
+    margin-top: 5vh;
     width: 100%;
     height: 90%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 30px; /* Space between boxes */
+    grid-template-columns: repeat(auto-fit, minmax(20vh, 1fr));
     padding: 20px;
-    overflow: hidden;
-    overflow-y: scroll;
+    gap: 10px;
+    
 }
-#closeButton
-{
+
+#closeButton {
+    font-size: 2vh;
     position: fixed;
     right: 20px;
     width: 4vh;
@@ -29,23 +30,21 @@
     border: none;
     background-color: var(--StandardGray-2);
 }
-#closeButton:hover
-{
+
+#closeButton:hover {
     background-color: var(--StandardGray-3);
 }
+
 .box {
-    color: var(--standardTextColor-0);
-    font-size: 28px;
-    box-shadow: none;
+    padding: 0px !important;
+    aspect-ratio: 1 / 1;
+    background-color: #1B4958;
+    text-align: center;
     width: 100%;
     height: 100%;
-    background-color: #25292E;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
-.box:hover
-{
+
+.box:hover {
     background-color: #23272B;
     cursor: pointer;
 }
